# C-allen

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.MD  cmake_install.cmake  create_gui.py  run.ps1  text.txt
allen_lib/: allen.h
allen_lib/allen/: input.h  print.h
include/: allen.h
include/allen/: array.h  arrays.h  converter.h  escape.h  files.h  graphics.h  input.h  lang.h  list.h  macros.h  matte.h  morse.h  physics.h  pointers.h  print.h  props.h  system.h  tests.h  threads.h
include/impel/allen/: stuff.c
include/impel/arrays/: int.c  int_array.c
include/impel/graphics/: linux.c  windows.c
include/impel/print/: char.c  characters.c  double.c  float.c  generics.c  int.c  integers.c
include/impel/system/: sys.c
include/impel/threads/: threads.c
linux/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: main.c
